--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<script type="text/javascript" src="dpd.js"></script>
+	<!--script type="text/javascript" src="dpd.js"></script-->
     <script src="/components/webcomponentsjs/webcomponents.js"></script>
     <link rel="import" href="comments-list.html">
+    <link rel="import" href="/components/google-youtube/google-youtube.html">
 </head>
 <body>
+  <google-youtube id="my-video" videoid="dQw4w9WgXcQ" autoplay="1"></google-youtube>
 	<h1>Comments 'n' stuff</h1>
     <comments-list></comments-list>
 </body>
