--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
 	<script type="text/javascript" src="dpd.js"></script>
     <script src="/bower_components/webcomponentsjs/webcomponents.js"></script>
     <link rel="import" href="comments-list.html">
+            <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+
 </head>
 <body>
 	<h1>Comments 'n' stuff</h1>
