--- a/public/comments-list.html
+++ b/public/comments-list.html
@@ -1,10 +1,11 @@
 <link rel="import" href="/bower_components/polymer/polymer.html">
+<link rel="import" href="comments-item.html">
 
 <polymer-element name="comments-list" attributes="comments">
     <template>
         <style>
             .comment_list {
-                background-color: red;
+                width: 50%;
             }
         </style>
         <div class="comment_list">
