--- a/public/comments-list.html
+++ b/public/comments-list.html
@@ -1,4 +1,3 @@
-<link rel="import" href="comments-item.html">
 <link rel="import" href="/components/polymer/polymer.html">
 
 <polymer-element name="comments-list" attributes="comments">
@@ -13,6 +12,11 @@
                 <comments-item text="comment"></comments-item>
             </template>
         </div>
+        <ul>
+            <template repeat="{{ comment in comments }}">
+                <li>{{comment.userName}} {{comment.date}} - {{comment.text}}</li>
+            </template>
+        </ul>
     </template>
     <script>
         Polymer({
@@ -25,6 +29,13 @@
                     "likes": 3000
                 }
             ],
+	    ready: function () {
+                var el = this;
+                document.querySelector('comments-entry')
+                .addEventListener('newComment', function (evt) {
+                    el.comments.push(evt.detail);
+                });
+            },
         });
     </script>
 </polymer-element>
