--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,12 @@
     <link rel="import" href="comments-list.html">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="import" href="/components/google-youtube/google-youtube.html">
+    <link rel="import" href="comments-entry.html">
 </head>
 <body>
-  <google-youtube id="my-video" videoid="dQw4w9WgXcQ" autoplay="1"></google-youtube>
+  <google-youtube id="my-video" videoid="dQw4w9WgXcQ" autoplay=false style="display: none;"></google-youtube>
 	<h1>Comments 'n' stuff</h1>
+    <comments-entry></comments-entry>
     <comments-list></comments-list>
 </body>
 </html>
