--- a/public/comments-list.html
+++ b/public/comments-list.html
@@ -1,4 +1,5 @@
 <link rel="import" href="/components/polymer/polymer.html">
+<link rel="import" href="/comments-item.html">
 
 <polymer-element name="comments-list" attributes="comments">
     <template>
@@ -12,11 +13,6 @@
                 <comments-item text="comment"></comments-item>
             </template>
         </div>
-        <ul>
-            <template repeat="{{ comment in comments }}">
-                <li>{{comment.userName}} {{comment.date}} - {{comment.text}}</li>
-            </template>
-        </ul>
     </template>
     <script>
         Polymer({
