Made comments detail pull from the main list

--- a/public/comments-list.html
+++ b/public/comments-list.html
@@ -1,4 +1,5 @@
 <link rel="import" href="/components/polymer/polymer.html">
+<link rel="import" href="comments-item.html">
 
 <polymer-element name="comments-list" attributes="comments">
     <template>
@@ -9,14 +10,9 @@
         </style>
         <div class="comment_list">
             <template repeat="{{ comment in comments }}">
-                <comments-item text="comment"></comments-item>
+                <comments-item comment="{{ comment }}"></comments-item>
             </template>
         </div>
-        <ul>
-            <template repeat="{{ comment in comments }}">
-                <li>{{comment.userName}} {{comment.date}} - {{comment.text}}</li>
-            </template>
-        </ul>
     </template>
     <script>
         Polymer({
@@ -27,7 +23,28 @@
                     "user_name": "Mario", 
                     "text": "It's-a me!",
                     "likes": 3000
-                }
+                },
+                {
+                    "id": "124",
+                    "user_picture": "http://upload.wikimedia.org/wikipedia/en/f/f1/LuigiNSMBW.png", 
+                    "user_name": "Luigi", 
+                    "text": "I just want to be loved.",
+                    "likes": -50
+                },
+                {
+                    "id": "125",
+                    "user_picture": "http://upload.wikimedia.org/wikipedia/en/d/d5/Peach_(Super_Mario_3D_World).png", 
+                    "user_name": "Peach", 
+                    "text": "I'll bake you a cake!",
+                    "likes": 402
+                },
+                {
+                    "id": "126",
+                    "user_picture": "http://upload.wikimedia.org/wikipedia/en/d/d1/Toad_3D_Land.png", 
+                    "user_name": "Mario", 
+                    "text": "Your princess is in another castle...",
+                    "likes": 0
+                },
             ],
 	    ready: function () {
                 var el = this;
