--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="import" href="comments-entry.html">
 </head>
 <body>
-  <google-youtube id="my-video" videoid="dQw4w9WgXcQ" autoplay=false style="display: none;"></google-youtube>
+  <google-youtube id="my-video" videoid="dQw4w9WgXcQ" autoplay=false></google-youtube>
 	<h1>Comments 'n' stuff</h1>
     <comments-entry></comments-entry>
     <comments-list></comments-list>
