--- a/public/comments-item.html
+++ b/public/comments-item.html
@@ -48,9 +48,11 @@
             },
             upvote: function () {
                 console.log("Thumbs-up");
+                this.comment.likes += 1;
             },
             downvote: function () {
                 console.log("Thumbs-down");
+                this.comment.likes -= 1;
             },
         });
     </script>
