Fix for likes initializing as NaN

--- a/public/comments-entry.html
+++ b/public/comments-entry.html
@@ -62,6 +62,7 @@
                     text: this.text,
                     date: new Date(),
                     email: this.email,
+					likes: 0
                 });
                 this.text = '';
                 this.email = '';
