--- a/public/comments-item.html
+++ b/public/comments-item.html
@@ -38,15 +38,19 @@
 				height: 48px;
 			}
 		</core-style>
-        <div class="comment_item">
-            <gravatar-photo email="{{ comment.email }}"></gravatar-photo>
-            <p>{{ comment.text }}</p>
-            <p class="user">{{ comment.user_name }}</p>
-            <p>
+        <div class="comment_item" >
+            <div horizontal justify-start layout>
+                <gravatar-photo email="{{ comment.email }}"></gravatar-photo>
+                <p style="padding:0 5px;margin: 0;height: 100%; " flex self-center>"{{ comment.text }}"</p>
+            </div>
+            <div horizontal justify-start layout>
+            <p class="user" style="margin:5px 0;" >{{ comment.user_name }}</p>
+            <p style="margin: 5px; ">
                 <span>{{ comment.likes }}</span>
                 <span on-click="{{ upvote }}" class="fa fa-thumbs-o-up"></span>
                 <span on-click="{{ downvote }}" class="fa fa-thumbs-o-down"></span>
             </p>
+            </div>
         </div>
     </template>
     <script>
