--- a/public/index.html
+++ b/public/index.html
@@ -9,38 +9,57 @@
     <link rel="import" href="comments-entry.html">
     <link rel="import" href="components/core-style/core-style.html">
     <link rel="import" href="components/core-toolbar/core-toolbar.html">
+    <link rel="import" href="components/core-icons/core-icons.html">
     <style>
         body {
             background-color: #f1f1f1;
             margin: 0;
         }
+
+    .card {
+        background-color: white;
+        box-shadow: 0 0 2px 2px rgba(0,0,0,.1);
+        box-sizing: border-box;
+        margin: 10px 5px 40px;
+        padding: 10px;
+        width: 90%;
+        max-width: 1000px;
+    }
+    .big { 
+        height: 48px;
+        width: 48px;
+    }
     </style>
 </head>
-<body class="container">
+<body class="container" layout vertical>
   <core-style id="yt-styles">
     .cardbody {
         background-color: white;
-        box-shadow: 0 1px 2px rgba(0,0,0,.1);
+        box-shadow: 0 0 10px rgba(0,0,0,.22);
         box-sizing: border-box;
-        padding: 5px;
         margin: 5px;
-        width: 100%;
-        max-width: 800px;
+        width: 90%;
+        max-width: 1000px;
     }
 
     :host {
         width: 90%;
     }
   </core-style>
-
-  <core-toolbar>
-
-  </core-toolbar>
+  <core-header-panel flex>
+      <core-toolbar>
+         <paper-icon-button class="big" icon="face"></paper-icon-button>
+         <span flex>MyTube </span> 
+      </core-toolbar>
+  </core-header-panal>
 
   <google-youtube id="my-video" videoid="dQw4w9WgXcQ" autoplay=false></google-youtube>
     <h1 class="cardbody"style="text-align: center;" >Comments 'n' stuff</h1>
-
-    <comments-entry></comments-entry>
-    <comments-list></comments-list>
+    <div horizontal center-justified layout>
+        <div class="card">
+           <comments-entry></comments-entry>
+           <comments-list></comments-list>
+       </div>
+    </div>
 </body>
 </html>
