Futzing with youtube player avec la Joe

--- a/public/index.html
+++ b/public/index.html
@@ -81,7 +81,7 @@
 
 
 
-  <google-youtube class="padding-top padding-bottom" style="background:darkgray; padding-top: 20px; padding-bottom: 20px;"  id="my-video" videoid="dQw4w9WgXcQ" autoplay=false></google-youtube>
+  <google-youtube class="padding-top padding-bottom" style="background:darkgray; padding-top: 20px; padding-bottom: 20px; max-width:75%;"  id="my-video" videoid="dQw4w9WgXcQ" autoplay=false fluid=true ></google-youtube>
     <h1 class="cardbody"style="text-align: center;" >Comments 'n' stuff</h1>
     <div horizontal center-justified layout>
         <div class="card">
