--- a/public/index.html
+++ b/public/index.html
@@ -3,29 +3,49 @@
 <head>
     <!--script type="text/javascript" src="dpd.js"></script-->
     <script src="components/webcomponentsjs/webcomponents/js"></script>
-   <link rel="import" href="dependencies.html"> 
-  
+    <link rel="import" href="comments-list.html">
+    <link rel="import" href="comments-entry.html">
+    <link rel="import" href="youtube-letterbox.html">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="import" href="/components/google-youtube/google-youtube.html">
+    <link rel="import" href="/components/core-selector/core-selector.html">
+    <link rel="import" href="/components/core-header-panel/core-header-panel.html">
+    <link rel="import" href="/components/core-style/core-style.html">
+    <link rel="import" href="/components/core-collapse/core-collapse.html">
+    <link rel="import" href="/components/core-toolbar/core-toolbar.html">
+    <link rel="import" href="/components/core-icon-button/core-icon-button.html">
+    <link rel="import" href="/components/core-menu-button/core-menu-button.html">
+    <link rel="import" href="/components/core-dropdown/core-dropdown-base.html">
+    <link rel="import" href="/components/core-dropdown/core-dropdown.html">
+    <link rel="import" href="/components/core-menu/core-menu.html">
+    <link rel="import" href="/components/core-item/core-item.html">
+    <link rel="import" href="/components/core-icons/core-icons.html">
+    <link rel="import" href="/components/core-iconset/core-iconset.html">
+    <link rel="import" href="/components/paper-input/paper-input.html">
+    <link rel="import" href="/components/paper-icon-button/paper-icon-button.html">
+
     <style>
         html, body {
             background-color: #f1f1f1;
             margin: 0;
             height: 100%;
+            font-family: sans-serif;
         }
         core-header-panel {height: 100%;}
 
-    .card {
-        background-color: white;
-        box-shadow: 0 0 2px 2px rgba(0,0,0,.1);
-        box-sizing: border-box;
-        margin: 10px 5px 40px;
-        padding: 10px;
-        width: 90%;
-        max-width: 1000px;
-    }
-    .big { 
-        height: 48px;
-        width: 48px;
-    }
+        .card {
+            background-color: white;
+            box-shadow: 0 0 2px 2px rgba(0,0,0,.1);
+            box-sizing: border-box;
+            margin: 10px 5px 40px;
+            padding: 10px;
+            width: 90%;
+            max-width: 1000px;
+        }
+        .big {
+            height: 48px;
+            width: 48px;
+        }
     </style>
 </head>
 <body class="container" layout vertical>
@@ -53,41 +73,31 @@
     }
   </core-style>
   <core-header-panel flex>
-      <core-toolbar style="background:red;">
+    <core-toolbar style="background: white;">
          <core-menu-button>
-           <core-icon-button icon="menu"></core-icon-button> 
+           <core-icon-button icon="menu"></core-icon-button>
             <core-dropdown class="dropdown" layered>
                 <core-menu>
-                    <core-item> Your Account </core-item>
-                    <core-item> Settings </core-item>
-                    <core-item> Help </core-item>
-                    <core-item> Do you Grok? </core-item>
+                    <core-item>GitHub</core-item>
+                    <core-item>Izeni</core-item>
                 </core-menu>
             </core-dropdown>
          </core-menu-button>
-         <core-icon class="big" style="color:yellow;"  icon="polymer"></core-icon>
-         <span style="color: white;" flex>
-           MyTube or PolyTube  
-           <core-icon class="big" style="color: white;" 
-             icon="account-circle">
-           </core-icon>
-         </span>
-         <paper-icon-button icon="search"></paper-icon-button>
-         <paper-input style="color: white;" label="Search"></paper-input> 
-      </core-toolbar>
+         <core-icon class="big" style="color: #cc181e;" icon="polymer"></core-icon>
+         <span style="color: black;" flex>PolyTube</span>
+         <paper-input label="Search"></paper-input>
+         <paper-icon-button icon="search" style="color: #cc181e;"></paper-icon-button>
+    </core-toolbar>
 
-<!-- ########################## end Header################################# -->
-
-
-
-
-  <google-youtube class="padding-top padding-bottom" style="background:darkgray; padding-top: 20px; padding-bottom: 20px; max-width:75%;"  id="my-video" videoid="dQw4w9WgXcQ" autoplay=false fluid=true ></google-youtube>
-    <h1 class="cardbody"style="text-align: center;" >Comments 'n' stuff</h1>
+    <youtube-letterbox>
+        <google-youtube center-justified horizontal layout id="my-video" width="90%" height="400px" videoid="dQw4w9WgXcQ" autoplay=false></google-youtube>
+    </youtube-letterbox>
+    <h1 class="cardbody" style="text-align: center;">Comments 'n' stuff</h1>
     <div horizontal center-justified layout>
         <div class="card">
-           <comments-entry></comments-entry>
-           <comments-list></comments-list>
-       </div>
+            <comments-entry></comments-entry>
+            <comments-list></comments-list>
+        </div>
     </div>
 
   </core-header-panel>
