Fix to typo and FUOC avoidance

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <!--script type="text/javascript" src="dpd.js"></script-->
-    <script src="components/webcomponentsjs/webcomponents/js"></script>
+    <script src="components/webcomponentsjs/webcomponents.js"></script>
     <link rel="import" href="comments-list.html">
     <link rel="import" href="comments-entry.html">
     <link rel="import" href="youtube-letterbox.html">
@@ -48,8 +48,8 @@
         }
     </style>
 </head>
-<body class="container" layout vertical>
-  <core-style id="yt-styles">
+<body class="container" layout vertical unresolved>
+  <core-style id="yt-styles" hidden>
     .cardbody {
         background-color: white;
         box-shadow: 0 0 10px rgba(0,0,0,.22);
