Make sure core-style is hidden

--- a/public/gravatar-photo.html
+++ b/public/gravatar-photo.html
@@ -3,7 +3,7 @@
 
 <polymer-element name="gravatar-photo" attributes="email">
 <template>
-	<core-style ref="gravatar-photo"></core-style>
+	<core-style ref="gravatar-photo" hidden></core-style>
 	<img src="//www.gravatar.com/avatar/{{ md5 }}">
 </template>
 <script>
